# warung-pak-min

./: .gitignore  pyproject.toml
app/: __init__.py  config.py  extensions.py
app/forms/: __init__.py  customer.py  kasbon.py  order.py  payment.py
app/models/: __init__.py  customer.py  kasbon.py  order.py  payment.py  user.py
app/routes/: __init__.py  api.py  auth.py  customer.py  kasbon.py  main.py  order.py  payment.py
app/static/css/: output.css
app/static/js/: main.js
app/templates/: base.html  customer_summary.html  dashboard.html  index.html
app/templates/auth/: login.html  profile.html
app/templates/customer/: customer_form.html  customer_list.html
app/templates/kasbon/: kasbon_form.html  kasbon_list.html
app/templates/order/: order_form.html  order_list.html
app/templates/payment/: payment_form.html  payment_list.html
app/utils/: helpers.py
