[project]
name = "warung-pak-min"
version = "0.1.0"
description = "Sistem manajemen warung makan dan minum sederhana dengan kasbon, pemesanan harian, dan laporan keuangan."
readme = "README.md"
authors = [
    { name = "Khanza Fadila Azhara", email = "khanzafadilaazz@gmail.com" }
]
requires-python = ">=3.13"
keywords = ["flask", "sqlalchemy", "pydantic", "kasbon", "order", "warung"]
dependencies = [
    "flask>=3.1.1",
    "flask-login>=0.6.3",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "pydantic[email]>=2.11.7",
    "python-dotenv>=1.1.1",
    "reportlab>=4.4.3",
    "uvicorn>=0.35.0",
]